--- a/ucblogo.vcxproj.filters
+++ b/ucblogo.vcxproj.filters
@@ -137,5 +137,8 @@
     <ClInclude Include="graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="smd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
