--- a/ucblogo.vcxproj.filters
+++ b/ucblogo.vcxproj.filters
@@ -141,4 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="Messages">
+      <Filter>Resource Files</Filter>
+    </CopyFileToFolders>
+  </ItemGroup>
 </Project>
