--- a/ucblogo.vcxproj.filters
+++ b/ucblogo.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="wxterm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="globals.h">
